[tool.poetry]
name = "asyncio-contextmanager-pool"
version = "0.1.0"
description = ""
authors = ["André Carvalho <afecarvalho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
